@@ -2,7 +2,7 @@ Package: stm
 Type: Package
 Title: Estimation of the Structural Topic Model
 Version: 1.3.1
-Date: 2017-09-29
+Date: 2017-10-24
 Author: Margaret Roberts [aut, cre], 
         Brandon Stewart [aut, cre],
         Dustin Tingley [aut, cre],
